# youtusic

./: .gitignore  CursesIO.py  LICENSE  README.md  main.py  pyproject.toml  youtusic.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
docs/: PLAN.md  SECURITY.md  TODO.md  header.txt  requirements.txt
docs/ico/: title.txt
src/youtusic/: CursesIO.py  __init__.py  main.py  youtusic.py
tests/: example_csv.csv  use_of_curses.py
youtusic/: __main__.py  config.py  main.py  tui.py
